# SubrosaDG

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  .iwyu.imp  CMakeLists.txt  CMakePresets.json  DEVELOP.md  Dockerfile  LICENSE  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
cmake/: .gdbinit.in  .lldbinit.in  ClangFormat.cmake  ClangTidy.cmake  Cmake.hpp.in  Doxygen.cmake  Gcovr.cmake  GlobFiles.cmake  Iwyu.cmake  SubrosaDG.in  Utils.cmake  clang-format.cmake  cmake.h.in  cmake.hpp.in  files.cmake  iwyu.cmake  launch.json.in  settings.json.in  utils.cmake
cmake/debuginit/: .gdbinit.in  .lldbinit.in
cmake/source/: Cmake.cpp.in  Cmake.hpp.in  SubrosaDG.cpp.in  SubrosaDG.in
cmake/vcpkg-triplet/: aarch64-linux-dynamic-llvm.cmake  arm64-osx-dynamic-llvm.cmake  linux-toolchain.cmake  osx-toolchain.cmake  (+1 more)
docs/: CMakeLists.txt  Doxyfile.in  develop-log.md  gmsh-note.ipynb
docs/develop-note/: CMakeLists.txt  develop-note.tex  draw_figures.py  references.bib
docs/develop-notes/: CMakeLists.txt  develop-note.cls
docs/develop-notes/dg_method/: CMakeLists.txt  dg_method.tex  draw_figures.py  references.bib
docs/develop-notes/ns-equ-var/: CMakeLists.txt  draw_figures.py  ns-equ-var.tex  references.bib
examples/: CMakeLists.txt  blasius_3d_cns.cpp  cylinder_2d_ceuler.cpp  cylinder_2d_incns.cpp  cylinder_3d_incns.cpp  delta_3d_cns.cpp  explosion_2d_ceuler.cpp  karmanvortex_2d_cns.cpp  khinstability_2d_ceuler.cpp  kovasznay_2d_incns.cpp  lidcavity_2d_incns.cpp  lidcavity_3d_incns.cpp  naca0010_2d_incns.cpp  naca0012_2d_ceuler.cpp  naca0012_2d_cns.cpp  periodic_1d_ceuler.cpp  periodic_2d_ceuler.cpp  periodic_3d_ceuler.cpp  protuberance_3d_ceuler.cpp  rae2822_2d_cns.cpp  sedovblast_2d_ceuler.cpp  shearlayer_2d_inceuler.cpp  shuosher_1d_ceuler.cpp  sod_1d_ceuler.cpp  sphere_3d_cns.cpp  sphere_3d_incns.cpp  square_3d_incns.cpp  taylorvortex_2d_incns.cpp  thermalcavity_2d_incns.cpp  thermalcavity_3d_incns.cpp  unsteadycavity_2d_incns.cpp
examples/blasius_3d_cns/: CMakeLists.txt  blasius_3d_cns.cpp
examples/blasius_3d_ns/: CMakeLists.txt  blasius_3d_ns.cpp
examples/cylinder_2d_ceuler/: CMakeLists.txt  cylinder_2d_ceuler.cpp
examples/cylinder_2d_euler/: CMakeLists.txt  cylinder_2d_euler.cpp
examples/cylinder_2d_incns/: CMakeLists.txt  cylinder_2d_incns.cpp
examples/cylinder_3d_incns/: CMakeLists.txt  cylinder_3d_incns.cpp
examples/cylinder_3d_ns/: CMakeLists.txt  cylinder_3d_ns.cpp
examples/delta_3d_cns/: CMakeLists.txt  delta_3d_cns.cpp
examples/delta_3d_ns/: CMakeLists.txt  delta_3d_ns.cpp
examples/explosion_2d_ceuler/: CMakeLists.txt  explosion_2d_ceuler.cpp
examples/explosion_2d_euler/: CMakeLists.txt  explosion_2d_euler.cpp
examples/gravity_2d_ns/: CMakeLists.txt  gravity_2d_ns.cpp
examples/instability_2d_ceuler/: CMakeLists.txt  instability_2d_ceuler.cpp
examples/instability_2d_euler/: CMakeLists.txt  instability_2d_euler.cpp
examples/karmanvortex_2d_cns/: CMakeLists.txt  karmanvortex_2d_cns.cpp
examples/khinstability_2d_ceuler/: CMakeLists.txt  khinstability_2d_ceuler.cpp
examples/kovasznay_2d_incns/: CMakeLists.txt  kovasznay_2d_incns.cpp
examples/lidcavity_2d_incns/: CMakeLists.txt  lidcavity_2d_incns.cpp
examples/lidcavity_2d_ns/: CMakeLists.txt  lidcavity_2d_ns.cpp
examples/lidcavity_3d_incns/: CMakeLists.txt  lidcavity_3d_incns.cpp
examples/naca0010_2d_incns/: CMakeLists.txt  naca0010_2d_incns.cpp
examples/naca0012/: CMakeLists.txt  naca0012.cfg  naca0012.cpp  naca0012.toml
examples/naca0012/mesh/: naca0012_gmsh.py  naca0012_mesh.cgns
examples/naca0012_2d_ceuler/: CMakeLists.txt  naca0012_2d_ceuler.cpp
examples/naca0012_2d_cns/: CMakeLists.txt  naca0012_2d_cns.cpp
examples/naca0012_2d_euler/: CMakeLists.txt  naca0012_2d_euler.cpp
examples/naca0012_2d_ns/: CMakeLists.txt  naca0012_2d_ns.cpp
examples/periodic_1d_ceuler/: CMakeLists.txt  periodic_1d_ceuler.cpp
examples/periodic_1d_euler/: CMakeLists.txt  periodic_1d_euler.cpp
examples/periodic_2d_ceuler/: CMakeLists.txt  periodic_2d_ceuler.cpp
examples/periodic_2d_euler/: CMakeLists.txt  periodic_2d_euler.cpp
examples/periodic_3d_ceuler/: CMakeLists.txt  periodic_3d_ceuler.cpp
examples/periodic_3d_euler/: CMakeLists.txt  periodic_3d_euler.cpp
examples/pipe_2d_ns/: CMakeLists.txt  pipe_2d_ns.cpp
examples/protuberance_3d_ceuler/: CMakeLists.txt  protuberance_3d_ceuler.cpp
examples/protuberance_3d_euler/: CMakeLists.txt  protuberance_3d_euler.cpp
examples/rae2822_2d_cns/: CMakeLists.txt  rae2822_2d_cns.cpp
examples/rae2822_2d_ns/: CMakeLists.txt  rae2822_2d_ns.cpp
examples/sedovblast_2d_ceuler/: CMakeLists.txt  sedovblast_2d_ceuler.cpp
examples/sedovblast_2d_euler/: CMakeLists.txt  sedovblast_2d_euler.cpp
examples/shearlayer_2d_inceuler/: CMakeLists.txt  shearlayer_2d_inceuler.cpp
examples/shuosher_1d_ceuler/: CMakeLists.txt  shuosher_1d_ceuler.cpp
examples/shuosher_1d_euler/: CMakeLists.txt  shuosher_1d_euler.cpp
examples/sod_1d_ceuler/: CMakeLists.txt  sod_1d_ceuler.cpp
examples/sod_1d_euler/: CMakeLists.txt  sod_1d_euler.cpp
examples/sphere_3d_cns/: CMakeLists.txt  sphere_3d_cns.cpp
examples/sphere_3d_ns/: CMakeLists.txt  sphere_3d_ns.cpp
examples/square_3d_incns/: CMakeLists.txt  square_3d_incns.cpp
examples/taylorvortex_2d_incns/: CMakeLists.txt  taylorvortex_2d_incns.cpp
examples/thermalcavity_2d_incns/: CMakeLists.txt  thermalcavity_2d_incns.cpp
examples/thermalcavity_3d_incns/: CMakeLists.txt  thermalcavity_3d_incns.cpp
examples/unsteadycavity_2d_incns/: CMakeLists.txt  unsteadycavity_2d_incns.cpp
examples/vortex_2d_cns/: CMakeLists.txt  vortex_2d_cns.cpp
examples/vortex_2d_ns/: CMakeLists.txt  vortex_2d_ns.cpp
include/: subrosa_dg.h
src/: SubrosaDG  SubrosaDG.cpp  subrosa_dg.cpp  subrosa_dg.hpp
tests/: CMakeLists.txt  test_2d.cpp  test_main.cpp
tests/dat/: test.toml
tests/test_1d/: CMakeLists.txt  test_1d.cpp
tests/test_2d/: CMakeLists.txt  test_2d.cpp  test_mesh_2d.cpp  test_solver_2d.cpp  test_structure_2d.h
utils/: develop.cpp
(+219 files in other folders)
